Chcemy aby main najeżdzał na header - wpierw position: fixed, później top:0; left:0;, dla main margin-top:100vh, następnie header width:100%. main jest teraz pod headerem i dajemy z-index: 1 dla header a dla mian: z-index:2; Do maindajemy position: relative i wuala działą ;). Mało z tego rozumiem jeśli chodzi o całokształt ale ważne że działa ;D

--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,21 @@ html {
 }
 header {
     height: 100vh;
+    width: 100%;
     background-color: #4D9B9C;
-    position: relative;
+    position: fixed;
+    top:0;
+    left:0;
     overflow-x: hidden;
     font-family: 'Oswald', sans-serif;
+    z-index: 1;
 }
 main {
     height: 100vh;
     background-color: grey;
+    margin-top: 100vh;
+    position: relative;
+    z-index: 2;
 }
 
 header img {
